--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
           COMMAND_ID=$(aws ssm send-command \
             --instance-ids "$INSTANCE_ID" \
             --document-name "AWS-RunShellScript" \
-            --parameters 'commands=["cd /opt/infra && git pull && ./scripts/deploy.sh"]' \
+            --parameters 'commands=["sudo -u ec2-user bash -lc 'cd /opt/infra && git pull && ./scripts/deploy.sh'"]' \
             --query "Command.CommandId" \
             --output text)
 
